--- a/styles.css
+++ b/styles.css
@@ -292,8 +292,12 @@ img:hover {
 .image-content{
     max-width: 100%;
 }
+.image-content h3{
+    text-align: center;
+    margin-bottom: 70px;
+}
 .image-content img{
-    margin: 50px;
+    margin: 20px;
     width: 90%;
     border-radius: 12px;
     transition: transform 0.3s ease;
@@ -811,8 +815,7 @@ header {
             }
         
             .image-container{
-                flex-direction: column;
-                align-items: center;
+                display: block;
             }
             .image-content{
                 width: 100%;
@@ -821,6 +824,11 @@ header {
                 width: 330px;
                 margin: 20px 0 ;
             }
+            .image-content h3{
+               
+                margin-top: 0;
+            }
+            
             .deli1{
             width: 100%;
             }
